2011-04-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.m:
	* Source/CFDictionary.m:
	* Headers/CoreFoundation/CFNumber.h
	* Headers/CoreFoundation/CFLocale.h
	* Headers/CoreFoundation/CFDictionary.h
	* Headers/CoreFoundation/CFString.h
	* Headers/CoreFoundation/CFBase.h
	* Headers/CoreFoundation/CFNumberFormatter.h
	* Headers/CoreFoundation/CFDate.h
	* Headers/CoreFoundation/CFArray.h: Fixes for C++.

2011-04-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/GNUmakefile:
	* Source/CFCalendar.c:
	* Headers/CoreFoundation/CFCalendar.h: Added empty CFCalendar.
	* Source/CFLocale.c: Return a CFCalendar for kCFLocaleCalendar.

2011-03-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterCreateStringWithValue)
	Implemented.
	* Tests/CFNumberFormatter/format.m: Added tests.

2011-03-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterGetValueFromString)
	Fixed copy-and-paste mistake.
	* Tests/CFNumberFormatter/parse.m: Added tests.

2011-03-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterSetProperty)
	(CFNumberFormatterCreateNumberFromString)
	(CFNumberFormatterCreateStringWithNumber)
	(CFNumberFormatterGetValueFromString) Implemented.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c:
	* Source/CFNumberFormatter.c: Add class functions.
	* Headers/CoreFoundation/CFBase.h: Define CFTypeRef as const.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: Minor fixes.
	* Source/CFNumberFormatter.c: Set default format.
	* Tests/CFNumberFormatter/create.m:
	* Tests/CFLocale/values.m:
	* Tests/CFLocale/identifier.m:
	* Tests/CFRuntime/runtime.m: Minor fixes.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterCopyProperty) Implemented.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: